--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -1740,7 +1740,31 @@
       };
     }
 
-    /* ===== nav ===== */
+    /* ===== auth ===== */
+    (async function authGuard(){
+      try{
+        const { data: sessionData } = await supabaseClient.auth.getSession();
+        const session = sessionData?.session;
+        if(!session){ window.location.replace("login.html"); return; }
+
+        const { data, error } = await supabaseClient.auth.getUser();
+        const user = data?.user;
+        if(error || !user){ window.location.replace("login.html"); return; }
+
+        if(!user.email_confirmed_at){
+          await supabaseClient.auth.signOut();
+          window.location.replace("verify.html?status=unverified");
+          return;
+        }
+
+        window.COINLUXORA_USER=user;
+        initWithUser(user);
+      }catch(e){
+        window.location.replace("login.html");
+      }
+    })();
+
+    /* NAV */
     function goPlans(){ window.location.href="plans.html"; }
     function goProfile(){ window.location.href="profile.html"; }
     function goDepositAndClear(){ clearBadge("deposits"); window.location.href="deposits.html"; }
@@ -2359,9 +2383,7 @@
       });
     }
 
-    /* ============================================================
-      ✅ AUTH GUARD (ONE BLOCK) + EMAIL VERIFIED
-    ============================================================ */
+    /* ===== auth ===== */
     (async function authGuard(){
       try{
         const { data: sessionData } = await supabaseClient.auth.getSession();
