--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -199,6 +199,12 @@
     }
     .iconBtn:hover{background:rgba(255,255,255,.08)}
 
+    /* ✅ NEW: hide top-left COIN + avatar + menu button when menu open */
+    body.menuOpen #stickyMenu{
+      visibility:hidden;
+      pointer-events:none;
+    }
+
     /* ===== HELLO CARD ===== */
     .helloCard{
       border-radius:20px;
@@ -1751,10 +1757,12 @@
     function openMenu(){
       document.getElementById("sidebar").classList.add("open");
       document.getElementById("overlay").classList.add("show");
+      document.body.classList.add("menuOpen");
     }
     function closeMenu(){
       document.getElementById("sidebar").classList.remove("open");
       document.getElementById("overlay").classList.remove("show");
+      document.body.classList.remove("menuOpen");
     }
     function hideGate(){
       const g=document.getElementById("authGate");
