--- a/login.html
+++ b/login.html
@@ -277,7 +277,7 @@ const SUPABASE_URL="https://xdcscknfomlzwysczegc.supabase.co";
 const SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhkY3Nja25mb21send5c2N6ZWdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MTYzMDMsImV4cCI6MjA4MzI5MjMwM30.E6o2wFFMOpK1DghLUqnxG6Ig09djy4bmDQexprhAiB4";
 const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-// If already logged in → only allow dashboard if VERIFIED
+// If already logged in → go to PIN gate
 checkSession();
 async function checkSession(){
   const { data } = await supabaseClient.auth.getUser();
@@ -289,7 +289,8 @@ async function checkSession(){
       setMsg("err", "Please verify your email before logging in.");
       return;
     }
-    window.location.href="user-dashboard.html";
+    // ✅ IMPORTANT: redirect to PIN page instead of dashboard
+    window.location.href="/session/";
   }
 }
 
@@ -332,7 +333,9 @@ async function login(){
   }
 
   setMsg("ok","Login successful ✅ Redirecting…");
-  setTimeout(()=> window.location.href="user-dashboard.html", 800);
+
+  // ✅ IMPORTANT: redirect to PIN page instead of dashboard
+  setTimeout(()=> window.location.href="/session/", 800);
 }
 
 // Forgot password reset
