--- a/session/index.html
+++ b/session/index.html
@@ -431,7 +431,7 @@
         setHint("PIN created successfully ✅");
         // After creating, send user to dashboard
         setTimeout(()=>{
-          window.location.href = "/dashboard.html"; // CHANGE to your dashboard path
+          window.location.href = "/user-dashboard.html";
         }, 450);
 
       } else {
@@ -446,7 +446,7 @@
 
         setHint("Verified ✅");
         setTimeout(()=>{
-          window.location.href = "/dashboard.html"; // CHANGE to your dashboard path
+          window.location.href = "/user-dashboard.html";
         }, 280);
       }
     }catch(err){
