--- a/session/index.html
+++ b/session/index.html
@@ -14,7 +14,6 @@
       --stroke:rgba(255,255,255,.10);
       --text:#eaf0ff;
       --muted:rgba(234,240,255,.65);
-      --accent:#8bd3ff;
       --danger:#ef4444;
     }
 
@@ -43,14 +42,15 @@
       isolation:isolate;
     }
 
+    /* ✅ glow layer forced behind everything */
     .card:before{
       content:"";
       position:absolute;
-      inset:-100px -140px auto -140px;
-      height:220px;
+      inset:-120px -160px auto -160px;
+      height:260px;
       background:radial-gradient(circle at 50% 40%, rgba(139,211,255,.18), transparent 60%);
-      pointer-events:none;
-      z-index:0;
+      pointer-events:none !important;
+      z-index:-1;
     }
 
     .layer{
@@ -77,11 +77,7 @@
     }
     .avatar svg{ width:34px; height:34px; opacity:.9; }
 
-    .who{
-      display:flex;
-      flex-direction:column;
-      gap:2px;
-    }
+    .who{ display:flex; flex-direction:column; gap:2px; }
     .name{ font-weight:700; letter-spacing:.2px; }
     .email{ font-size:.92rem; color:var(--muted); }
 
@@ -96,21 +92,19 @@
       font-size:1.75rem;
       letter-spacing:.2px;
     }
-
     .sub{
       margin:8px 0 0;
       color:var(--muted);
       font-size:1.02rem;
     }
 
-    /* ✅ PIN BOXES (rounded squares like screenshot) */
+    /* ✅ PIN BOXES */
     .pinBoxes{
       margin:18px 0 18px;
       display:flex;
       justify-content:center;
       gap:14px;
     }
-
     .pinBox{
       width:56px;
       height:56px;
@@ -120,34 +114,31 @@
       display:flex;
       align-items:center;
       justify-content:center;
-      box-shadow: 0 12px 35px rgba(0,0,0,.25);
-      position:relative;
-      overflow:hidden;
     }
-
     .pinDot{
       width:14px;
       height:14px;
       border-radius:999px;
       background:transparent;
       border:1px solid rgba(255,255,255,.30);
-      transition: .12s ease;
+      transition:.12s ease;
     }
-
     .pinBox.filled .pinDot{
-      background: rgba(255,255,255,.92);
-      border-color: rgba(255,255,255,.92);
-      transform: scale(1.05);
+      background:rgba(255,255,255,.92);
+      border-color:rgba(255,255,255,.92);
+      transform:scale(1.06);
     }
 
+    /* ✅ keypad always clickable */
     .pad{
       display:grid;
       grid-template-columns:repeat(3, 1fr);
       gap:14px;
       max-width:320px;
       margin:0 auto 18px;
-      z-index:5;
       position:relative;
+      z-index:9999;
+      pointer-events:auto !important;
     }
 
     .key{
@@ -162,8 +153,10 @@
       user-select:none;
       -webkit-tap-highlight-color: transparent;
       touch-action: manipulation;
+      pointer-events:auto !important;
+      position:relative;
+      z-index:10000;
     }
-    .key:active{ transform:scale(.98); }
 
     .key.ghost{
       background:transparent;
@@ -212,32 +205,44 @@
     }
 
     .danger{ color:var(--danger) !important; }
+
+    /* ✅ Hidden input for bulletproof mobile value updates */
+    .hiddenInput{
+      position:absolute;
+      opacity:0;
+      pointer-events:none;
+      height:1px;
+      width:1px;
+      left:-9999px;
+      top:-9999px;
+    }
   </style>
 </head>
 
 <body>
-
   <div class="card">
     <div class="layer">
 
       <div class="top">
-        <div class="avatar" id="avatarBox">
+        <div class="avatar">
           <svg viewBox="0 0 24 24" fill="none">
             <path d="M12 12c2.76 0 5-2.24 5-5S14.76 2 12 2 7 4.24 7 7s2.24 5 5 5Zm0 2c-4.42 0-8 2.24-8 5v1h16v-1c0-2.76-3.58-5-8-5Z" fill="currentColor" opacity=".85"/>
           </svg>
         </div>
         <div class="who">
           <div class="name" id="userName">Loading...</div>
-          <div class="email" id="userEmail"> </div>
+          <div class="email" id="userEmail"></div>
         </div>
       </div>
 
       <div class="divider"></div>
 
-      <h1 id="titleText">Secure Authentication</h1>
+      <h1>Secure Authentication</h1>
       <div class="sub" id="subText">Please verify your 4-digit PIN code</div>
 
-      <!-- ✅ PIN BOXES -->
+      <!-- Hidden input (bulletproof mobile) -->
+      <input id="pinInput" class="hiddenInput" inputmode="numeric" maxlength="4" />
+
       <div class="pinBoxes" id="pinBoxes">
         <div class="pinBox"><div class="pinDot"></div></div>
         <div class="pinBox"><div class="pinDot"></div></div>
@@ -281,7 +286,6 @@
   const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
   let mode = "verify";
-  let input = "";
   let pinHashFromDb = null;
   let user = null;
 
@@ -292,6 +296,7 @@
   const userEmail = document.getElementById("userEmail");
   const logoutBtn = document.getElementById("logoutBtn");
   const pad = document.getElementById("pad");
+  const pinInput = document.getElementById("pinInput");
   const pinBoxes = Array.from(document.querySelectorAll(".pinBox"));
 
   function setHint(msg, isDanger=false){
@@ -305,22 +310,23 @@
   }
 
   function renderPinBoxes(){
+    const v = (pinInput.value || "").slice(0,4);
     pinBoxes.forEach((box, i)=>{
-      box.classList.toggle("filled", i < input.length);
+      box.classList.toggle("filled", i < v.length);
     });
+    setVerifyReady(v.length === 4);
   }
 
-  function resetInput(){
-    input = "";
+  function clearPin(){
+    pinInput.value = "";
     renderPinBoxes();
-    setVerifyReady(false);
   }
 
   async function sha256(str){
     const data = new TextEncoder().encode(str);
-    const hashBuffer = await crypto.subtle.digest('SHA-256', data);
+    const hashBuffer = await crypto.subtle.digest("SHA-256", data);
     const hashArray = Array.from(new Uint8Array(hashBuffer));
-    return hashArray.map(b => b.toString(16).padStart(2, '0')).join('');
+    return hashArray.map(b => b.toString(16).padStart(2, "0")).join("");
   }
 
   async function init(){
@@ -358,54 +364,43 @@
       setHint("");
     }
 
-    renderPinBoxes();
-    resetInput();
+    clearPin();
   }
 
-  function addDigit(n){
-    if(input.length >= 4) return;
-    input += String(n);
-    renderPinBoxes();
-
-    if(input.length === 4){
-      setVerifyReady(true);
-      setTimeout(()=> verifyBtn.click(), 120);
-    }else{
-      setVerifyReady(false);
-    }
-  }
-
-  // ✅ SUPER RELIABLE: Event delegation (one listener)
-  pad.addEventListener("pointerdown", (e)=>{
+  // ✅ keypad input (guaranteed)
+  pad.addEventListener("click", (e)=>{
     const btn = e.target.closest("button");
     if(!btn) return;
-
-    e.preventDefault();
 
     const num = btn.getAttribute("data-num");
     const action = btn.getAttribute("data-action");
 
     if(num !== null){
-      addDigit(num);
+      if(pinInput.value.length >= 4) return;
+      pinInput.value += String(num);
+      renderPinBoxes();
+
+      if(pinInput.value.length === 4){
+        setTimeout(()=> verifyBtn.click(), 120);
+      }
       return;
     }
 
     if(action === "backspace"){
-      if(input.length === 0) return;
-      input = input.slice(0, -1);
+      pinInput.value = pinInput.value.slice(0,-1);
       renderPinBoxes();
-      setVerifyReady(input.length === 4);
       return;
     }
 
     if(action === "clear"){
-      resetInput();
       setHint("");
+      clearPin();
       return;
     }
-  }, { passive:false });
+  });
 
   verifyBtn.addEventListener("click", async ()=>{
+    const input = (pinInput.value || "").slice(0,4);
     if(input.length !== 4) return;
 
     verifyBtn.disabled = true;
@@ -414,7 +409,6 @@
     try{
       if(mode === "create"){
         const newHash = await sha256(input + ":" + user.id);
-
         const { error } = await supabase
           .from("user_pins")
           .insert([{ user_id: user.id, pin_hash: newHash }]);
@@ -422,7 +416,7 @@
         if(error){
           setHint("Unable to create PIN. Try again.", true);
           console.error(error);
-          resetInput();
+          clearPin();
           return;
         }
 
@@ -434,7 +428,7 @@
 
         if(attemptHash !== pinHashFromDb){
           setHint("Incorrect PIN. Try again.", true);
-          resetInput();
+          clearPin();
           return;
         }
 
@@ -444,7 +438,7 @@
     }catch(err){
       console.error(err);
       setHint("Something went wrong. Try again.", true);
-      resetInput();
+      clearPin();
     }
   });
 
